--- a/apps/server/package.json
+++ b/apps/server/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.1",
   "private": true,
   "scripts": {
-    "build": "tsc",
+    "build": "rimraf ../../build && tsc --outDir ../../build",
     "dev": "tsx watch src",
     "test-dev": "start-server-and-test 'tsx src/server' http-get://localhost:2022 'tsx src/client'",
     "test-start": "start-server-and-test 'node dist/server' http-get://localhost:2022 'node dist/client'"
@@ -17,6 +17,7 @@
     "abort-controller": "3.0.0",
     "fastify": "4.10.2",
     "node-fetch": "3.3.0",
+    "rimraf": "3.0.2",
     "superjson": "1.11.0",
     "tslib": "2.4.1",
     "ws": "8.11.0",
