--- a/package.json
+++ b/package.json
@@ -6,11 +6,10 @@
     "dev": "run-p -l -n dev:*",
     "dev:server": "NODE_ENV=development pnpm run --filter server dev",
     "dev:client": "NODE_ENV=development pnpm run --filter client dev",
-    "build": "NODE_ENV=production run-p -n build:*",
+    "build": "NODE_ENV=production run-s -n build:server build:client",
     "build:server": "NODE_ENV=production pnpm run --filter server build",
     "build:client": "NODE_ENV=production pnpm run --filter client build"
   },
-  "dependencies": {},
   "devDependencies": {
     "npm-run-all": "4.1.5"
   },
