--- a/client/package.json
+++ b/client/package.json
@@ -15,7 +15,7 @@
 	"devDependencies": {
 		"@playwright/test": "1.28.1",
 		"@sveltejs/adapter-static": "1.0.0-next.48",
-		"@sveltejs/kit": "1.0.0-next.560",
+		"@sveltejs/kit": "1.0.0-next.561",
 		"@typescript-eslint/eslint-plugin": "5.44.0",
 		"@typescript-eslint/parser": "5.44.0",
 		"eslint": "8.28.0",
@@ -25,13 +25,18 @@
 		"prettier-plugin-svelte": "2.8.1",
 		"svelte": "3.53.1",
 		"svelte-check": "2.9.2",
-		"svelte-preprocess": "4.10.7",
+		"svelte-preprocess": "^4.10.7",
 		"tslib": "2.4.1",
 		"typescript": "4.9.3",
-		"vite": "3.2.4"
+		"vite": "3.2.4",
+		"postcss": "8.4.19",
+		"postcss-load-config": "4.0.1",
+		"autoprefixer": "10.4.13",
+		"tailwindcss": "3.2.4"
 	},
 	"type": "module",
 	"dependencies": {
+		"server":"workspace:*",
 		"@trpc/client": "10.1.0",
 		"@trpc/server": "10.1.0"
 	}
