--- a/client/package.json
+++ b/client/package.json
@@ -18,26 +18,27 @@
 		"@sveltejs/kit": "1.0.0-next.561",
 		"@typescript-eslint/eslint-plugin": "5.44.0",
 		"@typescript-eslint/parser": "5.44.0",
+		"autoprefixer": "10.4.13",
 		"eslint": "8.28.0",
 		"eslint-config-prettier": "8.5.0",
 		"eslint-plugin-svelte3": "4.0.0",
+		"postcss": "8.4.19",
+		"postcss-load-config": "4.0.1",
 		"prettier": "2.8.0",
 		"prettier-plugin-svelte": "2.8.1",
 		"svelte": "3.53.1",
 		"svelte-check": "2.9.2",
 		"svelte-preprocess": "^4.10.7",
+		"tailwindcss": "3.2.4",
 		"tslib": "2.4.1",
 		"typescript": "4.9.3",
-		"vite": "3.2.4",
-		"postcss": "8.4.19",
-		"postcss-load-config": "4.0.1",
-		"autoprefixer": "10.4.13",
-		"tailwindcss": "3.2.4"
+		"vite": "3.2.4"
 	},
 	"type": "module",
 	"dependencies": {
-		"server":"workspace:*",
 		"@trpc/client": "10.1.0",
-		"@trpc/server": "10.1.0"
+		"@trpc/server": "10.1.0",
+		"server": "workspace:*",
+		"superjson": "1.11.0"
 	}
 }
