--- a/server/package.json
+++ b/server/package.json
@@ -20,6 +20,7 @@
     "@trpc/client": "10.1.0",
     "@trpc/server": "10.1.0",
     "abort-controller": "3.0.0",
+    "dotenv": "^16.0.3",
     "fastify": "4.10.2",
     "node-fetch": "3.3.0",
     "prisma": "4.6.1",
